# ai-document-assistant-be

./: README.md  pyproject.toml
.github/scripts/: generate_tests.py
.github/workflows/: test_coverage_check.yml
src/: main.py
tests/: test_main.py
