[project]
name = "ai-document-summarizer"
version = "0.1.0"
description = ""
authors = [
    {name = "Labdhi Shah"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "flask (>=3.1.1,<4.0.0)",
    "flask-cors (>=6.0.0,<7.0.0)",
    "openai (>=1.79.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "ai_document_summarizer", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
