[project]
name = "ai-document-assistant-be"
version = "0.1.0"
description = ""
authors = [
    {name = "Labdhi Shah"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "flask (>=3.1.1,<4.0.0)",
    "flask-cors (>=6.0.0,<7.0.0)",
    "openai (>=1.79.0,<2.0.0)"
]

[tool.poetry]
packages = [{ include = "src", from = "." } ]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
coverage = "^7.8.0"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=xml"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 90

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
